--- a/fleet_track/templates/vehicules/ajouter_position.html
+++ b/fleet_track/templates/vehicules/ajouter_position.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Ajouter Position - {{ vehicule.immatriculation }}</title>
@@ -43,4 +43,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> -->
