--- a/fleet_track/templates/vehicules/detail.html
+++ b/fleet_track/templates/vehicules/detail.html
@@ -51,7 +51,7 @@
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h5>Positions GPS récentes</h5>
-                        <a href="/fleet/vehicules/{{ vehicule.id }}/position/" class="btn btn-sm btn-primary">Ajouter position</a>
+                        <!-- <a href="/fleet/vehicules/{{ vehicule.id }}/position/" class="btn btn-sm btn-primary">Ajouter position</a> -->
                     </div>
                     <div class="card-body">
                         {% for position in positions %}
